# twc-rs

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.ru.md  deny.toml  install.sh  justfile  release-plz.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  publish-packages.yml  release-plz.yml  release.yml  security.yml
benches/: compare.sh
docs/: COMPARISON.md  TUI_PLAN.md
docs/book/: book.toml
docs/book/src/: authentication.md  comparison.md  completions.md  dashboard.md  install.md  introduction.md  usage.md
docs/demo/: cli-demo.tape  completions-demo.tape  tui-demo.tape
locales/: app.yml  chrome.yml  cli_a.yml  cli_account.yml  cli_apps.yml  cli_apps_create.yml  cli_b.yml  cli_doctor.yml  cli_extras.yml  cli_finish.yml  cli_image.yml  cli_image_upload.yml  cli_ip.yml  cli_project.yml  cli_server.yml  cli_server_create.yml  cli_ssh.yml  cli_update.yml  cli_vpc.yml  details.yml  finances.yml  help.yml  humanize.yml  overview.yml  palette.yml  services.yml  settings_panel.yml  tabs.yml  widgets.yml
packaging/: PKGBUILD  twc-rs-bin.install  twc-rs.rb
src/: auth_cli.rs  cli.rs  cli_dispatch.rs  commands.rs  config.rs  error.rs  jwt.rs  lib.rs  main.rs  output.rs  tui.rs
src/auth/: flow.rs  mod.rs  server.rs  store.rs  tests.rs
src/auth/flow/: tests.rs
src/auth/server/: tests.rs
src/auth/store/: tests.rs
src/cli/: apps.rs  balancers.rs  completers.rs  databases.rs  domains.rs  firewall.rs  images.rs  kubernetes.rs  network.rs  projects.rs  registry.rs  s3.rs  servers.rs  settings.rs  ssh.rs  tests.rs
src/commands/: account.rs  apps.rs  balancers.rs  databases.rs  doctor.rs  domains.rs  firewall.rs  floating_ips.rs  images.rs  kubernetes.rs  projects.rs  registry.rs  s3.rs  servers.rs  ssh_keys.rs  update.rs  vpc.rs
src/commands/apps/: tests.rs
src/commands/doctor/: tests.rs
src/commands/domains/: rows.rs
src/commands/kubernetes/: rows.rs
src/commands/projects/: tests.rs
src/commands/servers/: rows.rs  tests.rs
src/commands/ssh_keys/: tests.rs
src/commands/update/: tests.rs
src/config/: tests.rs
src/dashboard/: actions.rs  cache.rs  mod.rs  refresh.rs  splash.rs  stats.rs
src/error/: tests.rs
src/output/: tests.rs
src/tui/: app.rs  clipboard.rs  command_palette.rs  event.rs  humanize.rs  mod.rs  ui.rs
src/tui/app/: actions.rs  create.rs  data.rs  drill.rs  forms.rs  nav.rs  navigation.rs  overview.rs  palette.rs  settings.rs  stats.rs  summaries.rs  tabs.rs  tests.rs
src/tui/themes/: mod.rs
src/tui/ui/: overlays.rs  status_bar.rs
src/tui/widgets/: account.rs  button.rs  card_grid.rs  create_panel.rs  details.rs  events.rs  gauges.rs  help.rs  mod.rs  overview.rs  project_manager.rs  resource_cards.rs  resource_list.rs  resource_tabs.rs  server_list.rs  service_header.rs  settings_panel.rs  sidebar.rs  skeleton.rs  sparkline.rs  spinner.rs  stats.rs  token_info.rs
src/tui/widgets/details/: resources.rs
tests/: cli_integration.rs
